<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuscarFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/eBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Buscar"
        android:textStyle="italic"
        android:drawableLeft="@drawable/msearch"/>

    <Button
        android:id="@+id/bBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/bBuscar"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/tId"
        android:id="@+id/eId"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/tValor"
        android:id="@+id/eValor"
        />


</LinearLayout>